2015-12-23  Charlie Zender  <zender@uci.edu>

	* Simplify broken ncpdq handling of dimension reversal list. Change dmn_rvr_rdr from static to dynamic array.
	Prevent writing past end of dmn_rvr_rdr. Index dmn_rvr_rdr same as dmn_rdr. Fixes Feng Ding's command:
	ncpdq -O -a StdPressureLev,GeoTrack,GeoXTrack ${DATA}/hdf/AIRS.2014.10.01.202.L2.RetStd.v6.0.11.0.G14275134307.hdf.nc ~/foo.nc
	Breaks regression test ncpdq #41

2015-12-22  Charlie Zender  <zender@uci.edu>

	* Backward-compatible definitions of new tokens in netCDF 4.4.0 including NC_FORMATX_* tokens and NC_FORMAT_64BIT_[DATA/OFFSET] for CDF5

	* Add XLAT_M, XLONG_M coordinates to regridder database of usual suspects

	* Re-assign some ncremap switches to be more heuristic

	* Add ncremap to documentation

2015-12-21  Charlie Zender  <zender@uci.edu>

	* Compare grid spans and interfaces in single-precision (e.g., to 180.0f, 360.0f) to be more error-tolerant

	* ncremap pass through dbg_lvl >= 3 to ncks, enable user-defined thr_nbr

2015-12-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.4-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4-beta02 final changes';git push
	git tag -a 4.5.4-beta02 -m 'Version 4.5.4-beta02 new features: fix nfr lon 180; free nc_string patch';git push --tags

	* Check for lon == -180 not lon == 180 when inferring longitude	grid-type lon_typ

2015-12-18  Charlie Zender  <zender@uci.edu>

	* Use ignore environment to protect comments from PDF documentation (which ignores @c comment sentinels!)

2015-12-17  Charlie Zender  <zender@uci.edu>

	* Free var.val.sngp[:] before freeing var.val.vp in nco_prn.c (patch from Pedro)

2015-12-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4-beta01 final changes';git push
	git tag -a 4.5.4-beta01 -m 'Version 4.5.4-beta01 new features: fix nfr cap grd; ncremap';git push --tags

	* Move grid-span check from curvilinear code to work for all grids
